<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">karl.list</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="home">首页</string>
    <string name="message">消息</string>
    <string name="me">我</string>
    <string name="discove">广场</string>
    <string name="more">更多</string>

</resources>
